@@ -13,6 +13,7 @@
         <platform>all</platform>
         <news>
 2.2.3
+[add] Thumbnail size, Settings - General
 [fix] encoding and replace in clean_title_value
 [fix] unplayable videos on some systems, set curl opt verifypeer=false on playback urls
         </news>
