@@ -1,4 +1,5 @@
 2.2.3
+[add] Thumbnail size, Settings - General
 [fix] encoding and replace in clean_title_value
 [fix] unplayable videos on some systems, set curl opt verifypeer=false on playback urls
 
